:arrow_up: update to 1.20.6