@@ -101,14 +101,13 @@ public sealed interface TupleCodec extends Codec<List<Object>> {
                     List<Object> result = new ArrayList<>();
 
                     for (int i = 0; i < codecs.size(); i++) {
-                        var decode = codecs.get(i).decode(ops, list.get(i)).get().mapBoth(Pair::getFirst, Function.identity());
+                        var decode = codecs.get(i).decode(ops, list.get(i));
 
-                        decode.ifLeft(result::add);
+                        decode.map(r -> r.mapFirst(result::add));
+                        var error = decode.error();
 
-                        var right = decode.right();
-
-                        if (right.isPresent()) {
-                            return DataResult.error(() -> this + " error: " + right.get().message());
+                        if (error.isPresent()) {
+                            return DataResult.error(() -> this + " error: " + error.get().message());
                         }
                     }
 
@@ -139,7 +138,7 @@ public sealed interface TupleCodec extends Codec<List<Object>> {
         }
 
         public <T> Codec<T> bmap(Function<A, T> to, Function<T, A> from) {
-            return xmap(l -> to.apply((A) l.get(0)), from.andThen(List::of));
+            return xmap(l -> to.apply((A) l.getFirst()), from.andThen(List::of));
         }
 
         @Override
@@ -155,7 +154,7 @@ public sealed interface TupleCodec extends Codec<List<Object>> {
         }
 
         public <T> Codec<T> bmap(BiFunction<A, B, T> to, Function<T, T2<A, B>> from) {
-            return xmap(l -> to.apply((A) l.get(0), (B) l.get(1)), from.andThen(Tuple::asList));
+            return xmap(l -> to.apply((A) l.getFirst(), (B) l.get(1)), from.andThen(Tuple::asList));
         }
 
         @Override
@@ -171,7 +170,7 @@ public sealed interface TupleCodec extends Codec<List<Object>> {
         }
 
         public <T> Codec<T> bmap(Function3<A, B, C, T> to, Function<T, T3<A, B, C>> from) {
-            return xmap(l -> to.apply((A) l.get(0), (B) l.get(1), (C) l.get(2)), from.andThen(Tuple::asList));
+            return xmap(l -> to.apply((A) l.getFirst(), (B) l.get(1), (C) l.get(2)), from.andThen(Tuple::asList));
         }
 
         @Override
@@ -188,7 +187,7 @@ public sealed interface TupleCodec extends Codec<List<Object>> {
         }
 
         public <T> Codec<T> bmap(Function4<A, B, C, D, T> to, Function<T, T4<A, B, C, D>> from) {
-            return xmap(l -> to.apply((A) l.get(0), (B) l.get(1), (C) l.get(2), (D) l.get(3)), from.andThen(Tuple::asList));
+            return xmap(l -> to.apply((A) l.getFirst(), (B) l.get(1), (C) l.get(2), (D) l.get(3)), from.andThen(Tuple::asList));
         }
 
         @Override
@@ -205,7 +204,7 @@ public sealed interface TupleCodec extends Codec<List<Object>> {
         }
 
         public <T> Codec<T> bmap(Function5<A, B, C, D, E, T> to, Function<T, T5<A, B, C, D, E>> from) {
-            return xmap(l -> to.apply((A) l.get(0), (B) l.get(1), (C) l.get(2), (D) l.get(3), (E) l.get(4)), from.andThen(Tuple::asList));
+            return xmap(l -> to.apply((A) l.getFirst(), (B) l.get(1), (C) l.get(2), (D) l.get(3), (E) l.get(4)), from.andThen(Tuple::asList));
         }
 
         @Override
@@ -222,7 +221,7 @@ public sealed interface TupleCodec extends Codec<List<Object>> {
         }
 
         public <T> Codec<T> bmap(Function6<A, B, C, D, E, F, T> to, Function<T, T6<A, B, C, D, E, F>> from) {
-            return xmap(l -> to.apply((A) l.get(0), (B) l.get(1), (C) l.get(2), (D) l.get(3), (E) l.get(4), (F) l.get(5)), from.andThen(Tuple::asList));
+            return xmap(l -> to.apply((A) l.getFirst(), (B) l.get(1), (C) l.get(2), (D) l.get(3), (E) l.get(4), (F) l.get(5)), from.andThen(Tuple::asList));
         }
 
         @Override
@@ -239,7 +238,7 @@ public sealed interface TupleCodec extends Codec<List<Object>> {
         }
 
         public <T> Codec<T> bmap(Function7<A, B, C, D, E, F, G, T> to, Function<T, T7<A, B, C, D, E, F, G>> from) {
-            return xmap(l -> to.apply((A) l.get(0), (B) l.get(1), (C) l.get(2), (D) l.get(3), (E) l.get(4), (F) l.get(5), (G) l.get(6)), from.andThen(Tuple::asList));
+            return xmap(l -> to.apply((A) l.getFirst(), (B) l.get(1), (C) l.get(2), (D) l.get(3), (E) l.get(4), (F) l.get(5), (G) l.get(6)), from.andThen(Tuple::asList));
         }
 
         @Override
@@ -257,7 +256,7 @@ public sealed interface TupleCodec extends Codec<List<Object>> {
         }
 
         public <T> Codec<T> bmap(Function8<A, B, C, D, E, F, G, H, T> to, Function<T, T8<A, B, C, D, E, F, G, H>> from) {
-            return xmap(l -> to.apply((A) l.get(0), (B) l.get(1), (C) l.get(2), (D) l.get(3), (E) l.get(4), (F) l.get(5), (G) l.get(6), (H) l.get(7)), from.andThen(Tuple::asList));
+            return xmap(l -> to.apply((A) l.getFirst(), (B) l.get(1), (C) l.get(2), (D) l.get(3), (E) l.get(4), (F) l.get(5), (G) l.get(6), (H) l.get(7)), from.andThen(Tuple::asList));
         }
 
         @Override
@@ -275,7 +274,7 @@ public sealed interface TupleCodec extends Codec<List<Object>> {
         }
 
         public <T> Codec<T> bmap(Function9<A, B, C, D, E, F, G, H, I, T> to, Function<T, T9<A, B, C, D, E, F, G, H, I>> from) {
-            return xmap(l -> to.apply((A) l.get(0), (B) l.get(1), (C) l.get(2), (D) l.get(3), (E) l.get(4), (F) l.get(5), (G) l.get(6), (H) l.get(7), (I) l.get(8)), from.andThen(Tuple::asList));
+            return xmap(l -> to.apply((A) l.getFirst(), (B) l.get(1), (C) l.get(2), (D) l.get(3), (E) l.get(4), (F) l.get(5), (G) l.get(6), (H) l.get(7), (I) l.get(8)), from.andThen(Tuple::asList));
         }
 
         @Override
@@ -293,7 +292,7 @@ public sealed interface TupleCodec extends Codec<List<Object>> {
         }
 
         public <T> Codec<T> bmap(Function10<A, B, C, D, E, F, G, H, I, J, T> to, Function<T, T10<A, B, C, D, E, F, G, H, I, J>> from) {
-            return xmap(l -> to.apply((A) l.get(0), (B) l.get(1), (C) l.get(2), (D) l.get(3), (E) l.get(4), (F) l.get(5), (G) l.get(6), (H) l.get(7), (I) l.get(8), (J) l.get(9)), from.andThen(Tuple::asList));
+            return xmap(l -> to.apply((A) l.getFirst(), (B) l.get(1), (C) l.get(2), (D) l.get(3), (E) l.get(4), (F) l.get(5), (G) l.get(6), (H) l.get(7), (I) l.get(8), (J) l.get(9)), from.andThen(Tuple::asList));
         }
 
         @Override
@@ -312,7 +311,7 @@ public sealed interface TupleCodec extends Codec<List<Object>> {
         }
 
         public <T> Codec<T> bmap(Function11<A, B, C, D, E, F, G, H, I, J, K, T> to, Function<T, T11<A, B, C, D, E, F, G, H, I, J, K>> from) {
-            return xmap(l -> to.apply((A) l.get(0), (B) l.get(1), (C) l.get(2), (D) l.get(3), (E) l.get(4), (F) l.get(5), (G) l.get(6), (H) l.get(7), (I) l.get(8), (J) l.get(9), (K) l.get(10)), from.andThen(Tuple::asList));
+            return xmap(l -> to.apply((A) l.getFirst(), (B) l.get(1), (C) l.get(2), (D) l.get(3), (E) l.get(4), (F) l.get(5), (G) l.get(6), (H) l.get(7), (I) l.get(8), (J) l.get(9), (K) l.get(10)), from.andThen(Tuple::asList));
         }
 
         @Override
@@ -332,7 +331,7 @@ public sealed interface TupleCodec extends Codec<List<Object>> {
         }
 
         public <T> Codec<T> bmap(Function12<A, B, C, D, E, F, G, H, I, J, K, L, T> to, Function<T, T12<A, B, C, D, E, F, G, H, I, J, K, L>> from) {
-            return xmap(l -> to.apply((A) l.get(0), (B) l.get(1), (C) l.get(2), (D) l.get(3), (E) l.get(4), (F) l.get(5), (G) l.get(6), (H) l.get(7), (I) l.get(8), (J) l.get(9), (K) l.get(10), (L) l.get(11)), from.andThen(Tuple::asList));
+            return xmap(l -> to.apply((A) l.getFirst(), (B) l.get(1), (C) l.get(2), (D) l.get(3), (E) l.get(4), (F) l.get(5), (G) l.get(6), (H) l.get(7), (I) l.get(8), (J) l.get(9), (K) l.get(10), (L) l.get(11)), from.andThen(Tuple::asList));
         }
 
         @Override
@@ -352,7 +351,7 @@ public sealed interface TupleCodec extends Codec<List<Object>> {
         }
 
         public <T> Codec<T> bmap(Function13<A, B, C, D, E, F, G, H, I, J, K, L, M, T> to, Function<T, T13<A, B, C, D, E, F, G, H, I, J, K, L, M>> from) {
-            return xmap(l -> to.apply((A) l.get(0), (B) l.get(1), (C) l.get(2), (D) l.get(3), (E) l.get(4), (F) l.get(5), (G) l.get(6), (H) l.get(7), (I) l.get(8), (J) l.get(9), (K) l.get(10), (L) l.get(11), (M) l.get(12)), from.andThen(Tuple::asList));
+            return xmap(l -> to.apply((A) l.getFirst(), (B) l.get(1), (C) l.get(2), (D) l.get(3), (E) l.get(4), (F) l.get(5), (G) l.get(6), (H) l.get(7), (I) l.get(8), (J) l.get(9), (K) l.get(10), (L) l.get(11), (M) l.get(12)), from.andThen(Tuple::asList));
         }
 
         @Override
@@ -373,7 +372,7 @@ public sealed interface TupleCodec extends Codec<List<Object>> {
         }
 
         public <T> Codec<T> bmap(Function14<A, B, C, D, E, F, G, H, I, J, K, L, M, N, T> to, Function<T, T14<A, B, C, D, E, F, G, H, I, J, K, L, M, N>> from) {
-            return xmap(l -> to.apply((A) l.get(0), (B) l.get(1), (C) l.get(2), (D) l.get(3), (E) l.get(4), (F) l.get(5), (G) l.get(6), (H) l.get(7), (I) l.get(8), (J) l.get(9), (K) l.get(10), (L) l.get(11), (M) l.get(12), (N) l.get(13)), from.andThen(Tuple::asList));
+            return xmap(l -> to.apply((A) l.getFirst(), (B) l.get(1), (C) l.get(2), (D) l.get(3), (E) l.get(4), (F) l.get(5), (G) l.get(6), (H) l.get(7), (I) l.get(8), (J) l.get(9), (K) l.get(10), (L) l.get(11), (M) l.get(12), (N) l.get(13)), from.andThen(Tuple::asList));
         }
 
         @Override
@@ -394,7 +393,7 @@ public sealed interface TupleCodec extends Codec<List<Object>> {
         }
 
         public <T> Codec<T> bmap(Function15<A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, T> to, Function<T, T15<A, B, C, D, E, F, G, H, I, J, K, L, M, N, O>> from) {
-            return xmap(l -> to.apply((A) l.get(0), (B) l.get(1), (C) l.get(2), (D) l.get(3), (E) l.get(4), (F) l.get(5), (G) l.get(6), (H) l.get(7), (I) l.get(8), (J) l.get(9), (K) l.get(10), (L) l.get(11), (M) l.get(12), (N) l.get(13), (O) l.get(14)), from.andThen(Tuple::asList));
+            return xmap(l -> to.apply((A) l.getFirst(), (B) l.get(1), (C) l.get(2), (D) l.get(3), (E) l.get(4), (F) l.get(5), (G) l.get(6), (H) l.get(7), (I) l.get(8), (J) l.get(9), (K) l.get(10), (L) l.get(11), (M) l.get(12), (N) l.get(13), (O) l.get(14)), from.andThen(Tuple::asList));
         }
 
         @Override
@@ -416,7 +415,7 @@ public sealed interface TupleCodec extends Codec<List<Object>> {
         }
 
         public <T> Codec<T> bmap(Function16<A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P, T> to, Function<T, T16<A, B, C, D, E, F, G, H, I, J, K, L, M, N, O, P>> from) {
-            return xmap(l -> to.apply((A) l.get(0), (B) l.get(1), (C) l.get(2), (D) l.get(3), (E) l.get(4), (F) l.get(5), (G) l.get(6), (H) l.get(7), (I) l.get(8), (J) l.get(9), (K) l.get(10), (L) l.get(11), (M) l.get(12), (N) l.get(13), (O) l.get(14), (P) l.get(15)), from.andThen(Tuple::asList));
+            return xmap(l -> to.apply((A) l.getFirst(), (B) l.get(1), (C) l.get(2), (D) l.get(3), (E) l.get(4), (F) l.get(5), (G) l.get(6), (H) l.get(7), (I) l.get(8), (J) l.get(9), (K) l.get(10), (L) l.get(11), (M) l.get(12), (N) l.get(13), (O) l.get(14), (P) l.get(15)), from.andThen(Tuple::asList));
         }
 
         @Override
